# misc

./: README.md
cognition/: notes.txt
cognition/cogs/: Cargo.toml
cognition/math/: Basis3D.java  Matrix3X3.java  MatrixEnum.java  Q.java  Vector3D.java  VectorEnum.java
cognition/oblsph/: Cargo.toml  input.txt
cognition/oblsph/src/: lib.rs  main.rs  plot_os.rs
cognition/oblsph/src/test_consistency/: main.rs
cpp/array_size/: Makefile  (+2 more)
manifold/: app_nd_xtan.m  app_nd_xtan_autogen.m  driver_abyss.m  driver_affine.m  driver_affine_tangent.m  driver_basis_comp.m  driver_chebyshev.m  driver_chebyshev_fit.m  driver_chebyshev_plot.m  driver_circle_tangent.m  driver_colors.m  driver_covariance.m  driver_covariance_3d.m  driver_cross.m  driver_ellipse_pack.m  driver_helix.m  driver_householder.m  driver_lsd.m  driver_oblsph.m  driver_os.m  driver_os_coords.m  driver_rectangle_fit.m  driver_rectangle_fit2.m  driver_spanx.m  driver_sphere.m  driver_sphere_mt.m  driver_tpoly.m  driver_vortex.m  matrix3X3_plot.m  matrix3X3_points.m  mth_abyss2cart.m  mth_abyss_cont_basis.m  mth_abyss_cov_basis.m  mth_abyss_mt_con.m  mth_abyss_mt_cont.m  mth_abyss_mt_cov.m  mth_affine2cart.m  mth_affine_cont_basis.m  mth_affine_cov_basis.m  mth_affine_mt_cont.m  (+79 more)
rust/: notes.txt
rust/misc_test/: Cargo.toml
rust/misc_test/src/: main.rs
rust/misc_test/src/generic_num/: main.rs
rust/misc_test/src/move/: main.rs
rust/misc_test/src/patterns/: main.rs
tensor/: Basis3D.java  Q.java  TMatrix.java  TMatrix3x3.java  TMatrixEnum.java  TVector.java  TVectorEnum.java  Tensor.java
(+95 files in other folders)
