[package]
name = "oblsph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "oblsph"
path = "src/main.rs"

[[bin]]
name = "test_consistency"
path = "src/test_consistency/main.rs"

[dependencies]
cogs = { path = "../cogs" }
nalgebra = "0.33.2"
